--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/ARKA-S-WORLD_Bootstrap/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/ARKA-S-WORLD_Bootstrap/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -37,10 +37,10 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="/bio.html">BIO</a></li>
-                            <li><a class="dropdown-item" href="/image.html">IMAGES</a></li>
+                            <li><a class="dropdown-item" href="/ARKA-S-WORLD_Bootstrap/image.html">IMAGES</a></li>
                         </ul>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Me</a>
+                        <a class="nav-link" href="/ARKA-S-WORLD_Bootstrap/contact.html">Contact Me</a>
                     </li>
                     </li>
                 </ul>
